--- a/.gitignore
+++ b/.gitignore
@@ -152,7 +152,7 @@ dmypy.json
 # Cython debug symbols
 cython_debug/
 
-chat_histories/*.json
+chat_history/*.json
 /data_source/*/*.pdf
 /data_source/*/*.html
 *_token.py
