--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,9 @@ services:
         container_name: langchain
         restart: on-failure
         volumes:
-            - ${HOME}/.cache/huggingface:/root/.cache/huggingface
-            - ${HOME}/.cache/torch:/root/.cache/torch
+        - ${USERPROFILE}/.cache/huggingface:/root/.cache/huggingface
+        - ${USERPROFILE}/.cache/torch:/root/.cache/torch
+        
         shm_size: 512m
         ports:
             - 8003:5000
@@ -18,4 +19,5 @@ services:
                         - driver: nvidia
                           count: 1
                           capabilities: [gpu]
-        entrypoint: ["uvicorn", "src.app:app", "--host", "0.0.0.0", "--port", "5000", "--reload"]
+        entrypoint: ["uvicorn", "backend.api.app:app", "--host", "0.0.0.0", "--port", "5000", "--reload"]
+
