--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,17 @@
 services:
     langchain_service:
         build:
-            context: .
-            dockerfile: ./docker/Dockerfile
-        container_name: langchain
+            context: ./src/backend
+            dockerfile: docker/Dockerfile
+        container_name: api_langchain
         restart: on-failure
         volumes:
-            - ${HOME}/.cache/huggingface:/root/.cache/huggingface
-            - ${HOME}/.cache/torch:/root/.cache/torch
+        - ${USERPROFILE}/.cache/huggingface:/root/.cache/huggingface
+        - ${USERPROFILE}/.cache/torch:/root/.cache/torch
+        
         shm_size: 512m
         ports:
-            - 8003:5000
+            - 8003:8003
         deploy:
             resources:
                 reservations:
@@ -18,4 +19,4 @@ services:
                         - driver: nvidia
                           count: 1
                           capabilities: [gpu]
-        entrypoint: ["uvicorn", "src.app:app", "--host", "0.0.0.0", "--port", "5000", "--reload"]
+
